Update order detail & payment UI